[build-system]
requires = ["setuptools>=45", "wheel", "pybind11>=2.6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fastdijkstra"
version = "0.1.0"
description = "Fast Dijkstra and BMSSP algorithms for shortest path computation"
readme = "README.md"
requires-python = ">=3.6"
license = {file = "LICENSE"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["dijkstra", "shortest-path", "graph-algorithms", "bmssp"]
dependencies = [
    "pybind11>=2.6.0",
]

[project.urls]
Homepage = "https://github.com/moyuanchen/fastdijkstra"
Repository = "https://github.com/moyuanchen/fastDijkstra.git"
Issues = "https://github.com/moyuanchen/fastDijkstra/issues"
